cart page product name alignment is fixed

--- a/src/pages/Cart/CartPage.scss
+++ b/src/pages/Cart/CartPage.scss
@@ -27,6 +27,18 @@
         line-height: 17px;
         color: #000000;
       }
+
+      .product-name-alignment {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 0px;
+        line-height: 14px;
+        color: #000000;
+        text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        width: 100px;
+    }
       .item-varient {
         font-style: normal;
         font-weight: 500;
